[gd_scene load_steps=3 format=3 uid="uid://cy8otjo413bqb"]

[ext_resource type="Theme" uid="uid://dfureb8blyilx" path="res://ui/themes/default_theme.tres" id="1_0kwl6"]
[ext_resource type="Script" path="res://ui/elements/button.gd" id="2_73v4o"]

[node name="Button" type="Button"]
texture_filter = 1
offset_right = 116.0
offset_bottom = 24.0
theme = ExtResource("1_0kwl6")
text = "PLAY"
flat = true
script = ExtResource("2_73v4o")

[node name="FocusElements" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="LeftArrow" type="Polygon2D" parent="FocusElements"]
modulate = Color(0.74902, 1, 0.945098, 1)
position = Vector2(-4, 9)
polygon = PackedVector2Array(0, 0, 4, 2, 0, 4)

[node name="RightArrow" type="Polygon2D" parent="FocusElements"]
modulate = Color(0.74902, 1, 0.945098, 1)
position = Vector2(120, 13)
rotation = 3.14159
polygon = PackedVector2Array(0, 0, 4, 2, 0, 4)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
